tests/derive/double_borrow_non_send.stderr
error: Cannot borrow again a storage already borrowed exclusively, you may want to remove the shared borrow.
 --> $DIR/double_borrow_non_send.rs:8:8
  |
8 | fn run(_: NonSend<&NonSendStruct>, _: NonSend<&mut NonSendStruct>) {}
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Cannot borrow again a storage already borrowed exclusively, you may want to remove the shared borrow.
  --> $DIR/double_borrow_non_send.rs:11:8
   |
11 | fn run(_: NonSend<&NonSendStruct>, _: Unique<NonSend<&mut NonSendStruct>>) {}
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Cannot borrow again a storage already borrowed exclusively, you may want to remove the shared borrow.
  --> $DIR/double_borrow_non_send.rs:14:8
   |
14 | fn run(_: Unique<NonSend<&NonSendStruct>>, _: NonSend<&mut NonSendStruct>) {}
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Cannot borrow again a storage already borrowed exclusively, you may want to remove the shared borrow.
  --> $DIR/double_borrow_non_send.rs:17:8
   |
17 | fn run(_: Unique<NonSend<&NonSendStruct>>, _: Unique<NonSend<&mut NonSendStruct>>) {}
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
